proxy server kind of works

--- a/proxy/public/index.html
+++ b/proxy/public/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../shiyao-listingDescription/public/style.css">
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />  
     <title>Airbnc</title>
   </head>
   <body>
-    <div id="details"></div>
-    <!-- <div id="Related"></div>
-    <div id="Reviews"></div> -->
-    <!-- <script src="http://localhost:3002/app.js"></script> -->
+    <div id="photos"></div>
+    <div id="details"></div> 
+    <div id="reviews"></div>
+    <script src="http://localhost:3002/rooms/1/bundle.js"></script>
     <script src="http://localhost:3003/rooms/1/bundle.js"></script>
-    <!-- <script src="http://localhost:3004/app.js"></script> -->
+    <script src="http://localhost:3004/rooms/1/bundle.js"></script>
      <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script> 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
